@@ -3,7 +3,6 @@ package me.lamtinn.hypelib.menu;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public abstract class PaginatedMenu extends Menu {
@@ -15,12 +14,12 @@ public abstract class PaginatedMenu extends Menu {
 
     public PaginatedMenu(@NotNull final String title, final int rows) {
         super(title, rows);
-        this.data = Collections.emptyList();
+        this.data = List.of();
     }
 
     public PaginatedMenu(final int rows) {
         super(rows);
-        this.data = Collections.emptyList();
+        this.data = List.of();
     }
 
     public abstract List<String> contentSlots();
@@ -31,26 +30,27 @@ public abstract class PaginatedMenu extends Menu {
 
     @Override
     public void setButtons() {
-        int[] arr = this.getSlots(this.contentSlots());
-        final List<Integer> slots = Arrays.stream(arr).boxed().sorted().toList();
+        List<Integer> slots = Arrays.stream(this.getSlots(contentSlots()))
+                .boxed()
+                .toList();
 
-        this.borders();
-        this.setItemsPerPage(slots.size());
-        this.setMaxPage((int) Math.ceil((double) getDataSize() / getItemsPerPage()));
+        borders();
+        setItemsPerPage(slots.size());
+        setMaxPage((int) Math.ceil((double) getDataSize() / getItemsPerPage()));
 
         List<Object> data = (List<Object>) getData();
-        int items = this.getItemsPerPage();
+        int items = getItemsPerPage();
 
-        int startIndex = (this.page - 1) * items;
+        int startIndex = (getPage() - 1) * items;
         int endIndex = Math.min(startIndex + items, getDataSize());
 
         for (int i = startIndex; i < endIndex; i++) {
-            this.loop(data.get(i), slots.get(i - startIndex));
+            loop(data.get(i), slots.get(i - startIndex));
         }
     }
 
     public List<?> getData() {
-        return this.data;
+        return data;
     }
 
     public void setData(final List<?> data) {
@@ -58,9 +58,9 @@ public abstract class PaginatedMenu extends Menu {
     }
 
     public boolean next() {
-        if (this.page < this.getMaxPage()) {
-            page = page + 1;
-            this.reloadButtons();
+        if (getPage() < getMaxPage()) {
+            setPage(getPage() + 1);
+            reloadButtons();
             return true;
         } else {
             return false;
@@ -68,11 +68,11 @@ public abstract class PaginatedMenu extends Menu {
     }
 
     public boolean previous() {
-        if (this.page == 1) {
+        if (getPage() == 1) {
             return false;
         } else {
-            page = page - 1;
-            this.reloadButtons();
+            setPage(getPage() - 1);
+            reloadButtons();
             return true;
         }
     }
@@ -86,18 +86,22 @@ public abstract class PaginatedMenu extends Menu {
     }
 
     public int getPage() {
-        return this.page;
+        return page;
+    }
+
+    public void setPage(int page) {
+        this.page = page;
     }
 
     public int getItemsPerPage() {
-        return this.itemsPerPage;
+        return itemsPerPage;
     }
 
     public int getMaxPage() {
-        return this.maxPage;
+        return maxPage;
     }
 
     public int getDataSize() {
-        return this.data == null ? 0 : this.data.size();
+        return data.size();
     }
 }
